simple tamamlandı ve yorumlar modülü eklemdi

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,11 @@
     background-color: #6c55f9;
     color: #fff;
 }
+.smallyazi p{
+    line-height: 16px !important;
+}
+.sosmed a{
+color:#6c55f9 ;
+font-size: 24px;
+
+}
