anasayfa banner tamamlandı sql güncellendi

--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,17 @@ font-size: 24px;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+#princing .card:hover{
+    background-color: #6c55f9;
+    color: #fff;
+    transition: .9s;
+    box-shadow: 0px 0px 14px -1px rgba(0,0,0,0.75);
+
+}
+#princing .card:hover >.btn.btn-mor{
+    color: #6c55f9;
+    background-color: #fff;
+}
+#anabanner button{
+    border-radius: 150px;
+}
